fixed more issues with card class